# isc_dhcp_netbox

./: CHANGELOG.md  MANIFEST.IN  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  update-leases.py
isc_dhcp_netbox/: __init__.py  dhcp.py  main.py  netbox.py  utils.py
tests/: dhcpd.leases  test_dhcp.py  test_netbox.py  test_utils.py
tests/data/: dhcpd.leases
tests/etc/: dhcp_netbox.conf
