[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isc_dhcp_netbox"
version = "0.0.2"
authors = [
  { name="Tobias Hildebrand", email="tobus3000@tobotec.ch" },
]
description = "Updates NetBox with ISC DHCP lease information"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tobus3000/isc_dhcp_netbox"
"Bug Tracker" = "https://github.com/tobus3000/isc_dhcp_netbox/issues"

