[metadata]
name = isc_dhcp_netbox
version = 0.0.1

[options]
packages = isc_dhcp_netbox
install_requires =
    requests
    urllib3
    isc-dhcp-leases
    pynetbox

[options.entry_points]
console_scripts =
    isc_dhcp_netbox = isc_dhcp_netbox.main:main

[coverage:run]
branch = True
omit = dist/*,tests/*

[coverage:report]
show_missing = True
skip_covered = True

[tool:pytest]
addopts = --cov isc_dhcp_netbox/